--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://haticekatranciakgul.github.io/reduxnoteapp",
+  "homepage": "hhttp://haticekatranciakgul.github.io/reduxnoteapp",
   "name": "mynotesapp_redux",
   "version": "0.1.0",
   "private": true,
